<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="@color/lime_200">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="false"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            android:src="@drawable/profile_image" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toRightOf="@id/profile_image"
            android:text="@string/reyner_fernaldi"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name"
            android:layout_centerInParent="true"
            android:text="@string/reynerfernaldi"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-80dp">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/lime_200"
            app:cardElevation="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/heart" />

                <TextView
                    android:id="@+id/payment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="56"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/payment_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:textSize="14sp"
                    android:layout_below="@id/payment_label"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/lime_200"
            app:cardElevation="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"                    android:layout_marginTop="10dp"
                    android:src="@drawable/read"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/booking_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="5"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/booking_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/booking_label"
                    android:layout_centerHorizontal="true"
                    android:text="@string/book_rents"
                    android:textSize="14sp" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/email"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/email"
                android:text="@string/reynerfernaldi_gmail_com"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/github"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/github"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/github"
                android:text="@string/github_com_reynerfernaldi"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/linkedin"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/linkedin"
                android:text="@string/linkedin_com_in_reyner_fernaldi"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>

        
    
</LinearLayout>


